# rust-web-skeleton

./: README.md
skeleton/: Cargo.toml  config.toml
skeleton/src/: main.rs
skeleton/src/route/: mod.rs
skeleton/src/utils/: config.rs  init.rs  mod.rs
