[package]
name = "skeleton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common deps
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Project deps
surrealdb = "1.3.1"
toml = "0.8.12"
jsonwebtoken = "9"
axum = "0.7.5"
